--- a/app/src/main/res/layout/item_repository.xml
+++ b/app/src/main/res/layout/item_repository.xml
@@ -1,57 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="1dp"
-    android:padding="10dp"
     >
 
-    <ImageView
-        android:id="@+id/avatar"
-        android:layout_width="@dimen/avatar_image_size"
-        android:layout_height="@dimen/avatar_image_size"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@mipmap/ic_launcher"
-        />
+    <data>
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
+        <variable
+            name="repo"
+            type="com.test.githubrepos.com.test.githubrepos.model.dto.Repository"
+            />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:maxLines="2"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        app:layout_constraintLeft_toRightOf="@id/avatar"
-        app:layout_constraintTop_toBottomOf="@id/name"
-        tools:text="Each item should contain The avatar image of the ownerThe repository name The descriptionThe number of forks"
-        />
+        android:layout_marginBottom="1dp"
+        android:padding="@dimen/repository_item_padding"
+        >
 
-    <TextView
-        android:id="@+id/forks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        app:layout_constraintRight_toRightOf="parent"
-        android:paddingStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Fork 53"
-        />
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_width="@dimen/avatar_image_size"
+            android:layout_height="@dimen/avatar_image_size"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@mipmap/ic_launcher"
+            app:imageSource="@{repo.owner.avatarUrl}"
+            />
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        app:layout_constraintLeft_toRightOf="@id/avatar"
-        app:layout_constraintRight_toLeftOf="@id/forks"
-        android:maxLines="1"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Some repo name, quite long one"
-        />
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/repository_item_padding"
+            android:maxLines="2"
+            android:text="@{repo.description}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            app:layout_constraintLeft_toRightOf="@id/avatar"
+            app:layout_constraintTop_toBottomOf="@id/name"
+            tools:text="Each item should contain The avatar image of the ownerThe repository name The descriptionThe number of forks"
+            />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/forks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{@string/forks_number(repo.forks)}"
+            android:layout_marginStart="@dimen/repository_item_padding"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Fork 53"
+            />
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/repository_item_padding"
+            android:maxLines="1"
+            android:text="@{repo.name}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            app:layout_constraintLeft_toRightOf="@id/avatar"
+            app:layout_constraintRight_toLeftOf="@id/forks"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Some repo name, quite long one"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
