Added repository details page

--- a/app/src/main/res/layout/activity_repositories.xml
+++ b/app/src/main/res/layout/activity_repositories.xml
@@ -13,14 +13,14 @@
 
         <variable
             name="vm"
-            type="com.test.githubrepos.ui.MainViewModel"
+            type="com.test.githubrepos.com.test.githubrepos.ui.search.RepositoriesViewModel"
             />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.MainActivity"
+        tools:context=".com.test.githubrepos.ui.search.RepositoriesActivity"
         >
 
         <EditText
